[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GUI/DebugHelp.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/BAUHS93.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="DebugMenuLayer" type="CanvasLayer"]
pause_mode = 2

[node name="DebugMenu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.75192
margin_top = -0.583984
margin_right = -1.75195
margin_bottom = -0.583984
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DebugMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="DebugMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="DebugMenu/CenterContainer"]
margin_right = 205.0
margin_bottom = 349.0

[node name="VBoxContainer2" type="VBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_right = 191.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Debug Commands"
align = 1
valign = 2

[node name="HSeparator" type="HSeparator" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 191.0
margin_bottom = 28.0

[node name="debug_mode" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 191.0
margin_bottom = 62.0
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/debug_mode"]
margin_top = 8.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = " D : debug mode"

[node name="Control" type="Control" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/debug_mode"]
margin_left = 121.0
margin_right = 191.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )

[node name="CheckButton" type="CheckButton" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/debug_mode/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="god_mode" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 66.0
margin_right = 191.0
margin_bottom = 96.0
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode"]
margin_top = 8.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = " G : god mode"

[node name="Control" type="Control" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode"]
margin_left = 121.0
margin_right = 191.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )

[node name="CheckButton" type="CheckButton" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="true_god_mode" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 100.0
margin_right = 191.0
margin_bottom = 130.0
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/true_god_mode"]
margin_top = 8.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = " T : true god mode"

[node name="Control" type="Control" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/true_god_mode"]
margin_left = 121.0
margin_right = 191.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )

[node name="CheckButton" type="CheckButton" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/true_god_mode/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infinite_lives" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 134.0
margin_right = 191.0
margin_bottom = 164.0
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/infinite_lives"]
margin_top = 8.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = " I : infinite lives"

[node name="Control" type="Control" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/infinite_lives"]
margin_left = 121.0
margin_right = 191.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )

[node name="CheckButton" type="CheckButton" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/infinite_lives/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="god_mode4" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 191.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode4"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " K : eliminate ghosts"

[node name="god_mode5" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 190.0
margin_right = 191.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode5"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " S : respawn pacman"

[node name="god_mode6" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 212.0
margin_right = 191.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode6"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " F : spawn fruit"

[node name="god_mode7" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 234.0
margin_right = 191.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode7"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " W : skip level"

[node name="god_mode8" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 256.0
margin_right = 191.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode8"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " H : open/close this menu"

[node name="god_mode9" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 278.0
margin_right = 191.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode9"]
margin_top = 2.0
margin_right = 191.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = " B : break (may need config)"

[node name="HSeparator2" type="HSeparator" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 300.0
margin_right = 191.0
margin_bottom = 304.0

[node name="god_mode10" type="HBoxContainer" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 308.0
margin_right = 191.0
margin_bottom = 335.0
rect_min_size = Vector2( 0, 18 )
rect_clip_content = true

[node name="Label" type="Label" parent="DebugMenu/CenterContainer/PanelContainer/VBoxContainer2/god_mode10"]
margin_right = 191.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "(Warning : using any debug command
 will void any further highscore)"
align = 1
